fix bug #45 - colour contrast issues

--- a/webmaker-nav/css/webmaker-nav.less
+++ b/webmaker-nav/css/webmaker-nav.less
@@ -65,7 +65,7 @@
     .transition( top 0.1s ease );
 
     // Default state
-    color: fade( #FFF, 50% );
+    color: fade( #FFF, 60% );
     // Hover or always-on state
     &:hover,
     &.on {
